<resources>
    <string name="app_name">Music RC</string>
      <string name="allpc">all PC</string>
    <string name="versionprogram">20</string>
    <string name="back">◄</string>
    <string name="fast">fast mode</string>
    <string name="fast_summary">fast mode without answer from server</string>
    <string name="videosearch">Search</string>
    <string name="calling">Incoming call</string>
		<string name="calling_summary">The action for an incoming call</string>
		<string-array name="calling_value_array">
		<item>1</item>
			<item>2</item>
			<item>3</item>		
	</string-array>
		<string name="list_server">List servers</string>
    <string name="wakeup">Power On</string>
    <string name="discover_action_check">Check conection with RCS</string>
    <string name="btn_ping">Check server</string>
      <string name="live">server connection new</string>
      <string name="live_summary">Open each time a new connection (reliable) or maintain the old (faster).</string>
     <string name="adds">ads</string>
      <string name="adds_summary">show ads</string>
    <string name="nextversion">features will be available in the next version client</string>
    <string name="transfercontrol">File transfer, \nscreenshot</string>
    <string name="mousecontrol">Mouse control of server</string>
    <string name="bscreenshot">Big Scr.</string>
    <string name="screenshot">Get Screenshot</string>
     <string name="lock">Lock scr</string>
    <string name="exchange">File Copy</string>
    <string name="noconnect">NO connect</string>
    <string name="memoapp">RUN selected player, Change player, Close all Player</string>
    <string name="selectedplayer">Selected player (change)</string>
    <string name="start">RUN</string>
     <string name="change">Change</string>
     <string name="closeall">Close</string>
     <string name="autocode_title">Auto code</string>
	<string name="autocode_summary">Auto assign code when scanning servers or manual set other code</string>
	<string name="autoip_title">All IP</string>
	<string name="autoip_summary">Send broadcast messages for all PC</string>
    <string name="server_set">Manual configuration</string>
    <string name="notvalidmac">Not valid MAC address of server </string>
    <string name="empty"> </string>
	<string name="ip"></string>
	<string name="server_scan">Search of server</string>
	<string name="settings_label">Settings</string>
	<string name="settings_title">Settings</string>
	<string name="screenlock">Screen Lock</string>
			<string name="screenlock_summary">Do not lock the screen</string>
	<string name="vibro_title">Vibro</string>
	<string name="vibro_summary">vibro when button is pressed</string>
	<string name="serverftp_title">IP server</string>
	<string name="serverftp_summary">IP address server on computer</string>
	<string name="portftp_title">FTP port server</string>
	<string name="portftp_summary">FTP port server on computer (default is 22)</string>
	<string name="portudp_title">UDP port server</string>
	<string name="portudp_summary">UDP port server on computer (default is 4568)</string>
	<string name="passftp_title">code</string>
	<string name="passftp_summary">code access security to server on PC</string>
	<string name="master_title">Master Volume</string>
	<string name="master_summary">Maste Volume / player volume</string>
	<string-array name="nettype_array">
	    <item>wifi</item>
	    <item>3G</item>
	</string-array>
	<string-array name="nettype_value_array">
		<item>1</item>
		<item>2</item>		
	</string-array>
	<string name="ff">FF/Next</string>
	<string name="ff_summary">FastForward or Next item in list</string>
	<string-array name="ff_value_array">
		<item>1</item>
		<item>2</item>		
	</string-array>
	<string name="ip_select_title">Type player</string>
	<string name="playaudio_select_title">Type play</string>
	<string name="power_select_title">Shut down Windows</string>
		<string name="Code">Code</string>
		<string name="ipadress">IP PC</string>
		<string name="About">About</string>
			<string name="about_text">Remote Control - Music\n
		    \nRC is a Program to control a PC from Android smartphone
		    \nThe program include of a (Client) on your phone and a (Server) on your PC.   
		    \nManual:
\n1 Computer and smartphone must be connected to the same network WiFi.		    
\n2 Download and install it on a computer with Windows  program (Remote Control Server) from http://alexsoft.in
\n3 Run a server on your PC (starts automatically after install) - 
\n4 If you have Windows 7 PC, then all ready to work. 
\n FOR WINDOWS 8 PC:
\n5 If you have Windows 8 PC, then In the settings select Windows 8 and console to launch the (Search of Server) and select the found computer
\n6 You can set setting manual - a) select - Windows 8 PC b)  Manual configuration - enter IP server, access code and MAC address from RC server program on PC
\n\n\n
Desing by Vasile Sayfutdin,  www.dropr.com/vsf 
		    \n\n\nv 2.0.2.3 © AlexSoft. 2014г.
		    \nhttp://alexsoft.in 
</string>
		<string name="needwifi">Need Wifi connections to home network!</string>
		<string name="simple_title">type con</string>
		<string name="simple_summary">default is checked.</string>
		<string name="task_starting">Connecting to the server.</string>
		<string name="wait">wait</string>
		<string name="yes">OK</string>
		<string name="no">Cancel</string>
		<string name="ipadressserver">IP address of the server</string>
		<string name="ipadresstip">Type IP address server from PC</string>
		<string name="codewrong">Invalid access code - enter code from the computer app (RC Server) and try again</string>
		<string name="newcode">New Code</string>
		<string name="entercode">Type code :</string>
		<string name="searchurl">file:///android_asset</string>
		<string name="ftptransfererror">Error transfer by FTP</string>
		<string name="vol_select_title">Vol Menu</string>
		<string name="timer_select_title">Sleep mode Menu</string>
		<string name="apps_select_title">App Menu</string>
		<string name="videoplayer">Media player</string>
		<string name="video_summary">Choose which media player is used by default</string>
		<string-array name="servertype_value_array">
			<item>1</item>
			<item>2</item>
		</string-array>
		<string name="servertype_summary">type server communication</string>
		<string name="servertype">type server</string>
		    <string-array name="v_value_array">
		        <item>1</item>
			<item>2</item>
			<item>3</item>
		        </string-array>
<string-array name="video_value_array">
		<item>1</item>
			<item>2</item>
			<item>3</item>
			<item>4</item>			
			<item>5</item>
			<item>6</item>
			
			<item>7</item>
			<item>8</item>
			<item>9</item>
			<item>10</item>
			<item>11</item>
			<item>12</item>
			
			<item>13</item>
			<item>14</item>
			<item>15</item>
			<item>16</item>
			<item>17</item>
			<item>18</item>
			<item>19</item>
			<item>20</item>
			
			<item>21</item>
			<item>22</item>
			<item>23</item>
	</string-array>
		<string name="myapp">https://play.google.com/store/apps/details?id=in.alexsoft.rc.client</string>
		<string name="task_cancelled">Task is cancelled by user</string>
		<string name="task_working">Ping a server</string>
		<string name="ipnotcorrect">IP address is not valid or is server PC shut down OR firewall PC denied access to the Remote Control Server</string>
		<string name="ipbad">not the correct IP address. Range from 192.168.1.1 to 192.168.1.255</string>
		<string name="ipnow">Current IP address is:</string>
		<string name="wakeup_title">Power On</string>
	<string name="wakeup_summary">turn on the PC by IP and MAC address</string>
		<string name="mac_title">MAC address</string>
	<string name="mac_summary">MAC address of the network card PC - look in RC Server</string>
	<string name="entermac">Not specified of MAC address of the network card PC - look in RC Server</string>
	<string name="tema">Theme</string>
		<string name="tema_summary">choice of theme background</string>
<string-array name="tema_value_array">
		<item>1</item>
			<item>2</item>
			<item>3</item>
			</string-array>
	<string name="app_loading">Loading</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">OK</string>
    <string name="btn_discover">Discover</string>
    <string name="btn_discover_cancel">Cancel</string>
    <string name="btn_export">Export</string>
    <string name="btn_close">Close</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_options">Options</string>
    <string name="btn_back">Back</string>
    <string name="btn_info">Info</string>
    <string name="btn_ports">Ports</string>
    <string name="btn_remove">Remove</string>
    <string name="task_db">Downloading and installing %s database ...</string>
    <string name="task_services">Creating Services database ...\nThis may take a while ...</string>
    <string name="package_missing">%s must be installed from the market !</string>
    <string name="wifi_enabled">Wifi is enabled</string>
    <string name="wifi_enabling">Wifi is enabling</string>
    <string name="wifi_disabling">Wifi is disabling</string>
    <string name="wifi_disabled">Wifi is disabled</string>
    <string name="wifi_scanning">Wifi is scanning</string>
    <string name="wifi_associating">Wifi is associating with %s</string>
    <string name="wifi_dhcp">Obtaining IP address from %s</string>
    <string name="wifi_unknown">Wifi state unknown</string>
    <string name="net_ip">IP: %1$s/%2$d (%3$s)</string>
    <string name="my_ip">%1$s</string>
    <string name="net_carrier">CARRIER: %s</string>
    <string name="net_ssid">SSID: %s</string>
    <string name="net_mode">MODE: %s</string>
    <string name="net_mode_wifi">WiFi (%1$s %2$s)</string>
    <string name="net_mode_mobile">Mobile</string>
    <string name="net_mode_eth">Ethernet (Not supported yet)</string>
    <string name="net_mode_unknown">Unknown</string>
    <string name="discover_start">Discovery started ...</string>
    <string name="discover_finished">Discovery finished !</string>
    <string name="discover_canceled">Discovery canceled !</string>
    <string name="discover_proxy_title">Proxy Error</string>
    <string name="discover_proxy_msg">Discovery is canceled, because a mac address appeared multiple times, you probably are behind a proxy.\n\nGo to your Gateway from the browser : http://%s</string>
    <string name="discover_root_title">Installation: Root</string>
    <string name="discover_root_install">Do you want to install the scan daemon for root ?</string>
    <string name="discover_root_restart">Restarting application ...</string>
    <string name="manual">Configuration Wizard</string>
    <string name="poweroff">Power OFF</string>
    <string name="hibernate">Hibernate</string>
    <string name="timermenu">Timer Menu</string>
    <string name="timeroff">Turn off sleep mode</string>
    <string name="timeshutdown">PC  shutting down after X minutes</string>
    <string name="time1">1 minute</string>
    <string name="time3">3 minutes</string>
    <string name="time5">5 minutes</string>
    <string name="time10">10 minutes</string>
    <string name="time20">20 minutes</string>
    <string name="time30">30 minutes</string>
    <string name="time45">45 minutes</string>
    <string name="time60">1 hour</string>
    <string name="time90">1.5 hours</string>
    <string name="time120">2 hours</string>
    <string name="time150">2.5 hours</string>
    <string name="time180">3 hours</string>
    <string name="win7">Windows 7</string>
    <string name="win8">Windows 8</string>
	<string name="wizardset">Configuration Wizard</string>
	<string name="wizardsetstep">Step #</string>
	<string name="aboutwizard">BLA bla bla \n bla bla bla \n bla bla bla \n bla bla bla \n bla bla bla \n
	    BLA bla bla \n bla bla bla \n bla bla bla \n bla bla bla \n bla bla bla</string>
	     <string name="playlist">Playlist</string>
</resources>